slides/rust/examples/variables/immutable-string/out.out
error[E0384]: cannot assign twice to immutable variable `text`
 --> src/main.rs:5:5
  |
2 |     let text = "Hello World!";
  |         ----
  |         |
  |         first assignment to `text`
  |         help: consider making this binding mutable: `mut text`
...
5 |     text = "Something else";
  |     ^^^^^^^^^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

For more information about this error, try `rustc --explain E0384`.
error: could not compile `immutable-string` (bin "immutable-string") due to 1 previous error
